--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -18,7 +18,9 @@
 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
 本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
 
-最后，我们又针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
+最后，为了深化对仿冒应用的认识，我们又针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
+鉴于前人研究中有对应用进行排名欺诈行为的探索，我们也使用了两个不同的方法，从不同方面验证我们寻找到的仿冒应用中是否存在排名欺诈行为。
+结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知补上了一块拼图。
 
 我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
 
