--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -24,13 +24,19 @@ Over 150,000 samples related to the top 50 popular apps are collected for extens
 % 其分别为：仿冒应用的基本特征，针对仿冒样本的量化分析，及仿冒应用的发展轨迹。
 % 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
 % 本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
-% 最后，最后针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
 In this paper, we present discoveries from three different perspectives, namely, fake sample characteristics, quantitative study on fake samples and fake authors’ developing trend.
 The three perspectives follow a easy-to-complex pattern.
 We start from the basic pattern of fake apps, then combine the fake app data with their source app market, and lastly introduce time factor to mine the data.
 As a result, the three perspectives provide us with valuable domain knowledge, like fake apps’ naming tendency and fake developers’ evasive strategies.
 Moreover, we provide a number of thought-provoking case studies, confirming the findings mentioned above.
-Last and not least, we collect, analyze and verify a series of fake apps' feedback from the market, making our study more complete.
+
+% 最后，为了深化对仿冒应用的认识，我们又针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
+% 鉴于前人研究中有对应用进行排名欺诈行为的探索，我们也使用了两个不同的方法，从不同方面验证我们寻找到的仿冒应用中是否存在排名欺诈行为。
+% 结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知补上了一块拼图。
+Last and not least, to deepen our understanding towards fake apps, we collect, analyze and verify a series of fake apps' feedback from the market.
+Due to the fact that previous studies revealed the existence of ranking fraud in App markets, we also utilize two different measurements to verify whether the fake apps leverage ranking fraud service.
+As discerned and confirmed by our manual review, we make sure that some fake apps do deploy ranking fraud services to raise their exposure.
+By revealing this, we gather another piece of evidence to implement the puzzle of fake apps' nature, making our study more complete.
 
 % 我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
 We hope this paper can provide the readers with a clear vision of fake apps and their ecosystem, and thus raising more researchers' interest in observing and studying the Android underground industry.
