--- a/edwin_2019/chapter-dataCollection.tex
+++ b/edwin_2019/chapter-dataCollection.tex
@@ -13,7 +13,7 @@
 \end{figure}
 
 % Fig.~\ref{fig:Workflow} shows the workflow of our study, which can be divided into two main phases:
-\autoref{fig:Workflow} 展示了本文的工作流程，其可以分为两个主要阶段：
+\autoref{fig:Workflow} 展示了\fullref{chp:discoveries}的工作流程，其可以分为两个主要阶段：
 
 % (1)\ \emph{Data Collection}, which collects fake apps from all sorts of app markets based on the maintained official certificates, as well as the metadata of apps (e.g., package names and app names).
 1)\ \emph{数据收集} \quad
@@ -32,7 +32,7 @@
 % We also aim to unveil the developing trend of fake authors to help fake app detection and shine light on the nature of the fake apps' ecosystem for both academia and industry.
 我们也试图从收集到的信息中挖掘出仿冒应用作者的开发轨迹，以求为学术界和工业界揭示仿冒应用生态系统的更多信息。
 
-在此之外，我们还从几个第三方应用市场中随机选取一部分应用，提取了用户对它们的所有历史评价，然后筛选出其中对仿冒应用的评价并分析，以期了解用户对这些应用持有的态度或是寻找更多有价值的信息。
+在此之外，在\fullref{chp:feedback}中，我们还从几个第三方应用市场中随机选取一部分应用，提取了用户对它们的所有历史评价，然后筛选出其中对仿冒应用的评价并分析，以期了解用户对这些应用持有的态度，然后在此基础上检测仿冒应用是否有排名欺诈行为，为了方便作者理解，评论数据的收集、概览在\fullref{chp:feedback}另表。
 
 % \section{Data Collection}
 \section{数据收集}
