--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -8,32 +8,18 @@
 为此，我们从\texttt{360手机助手}应用商店中随机爬取了部分应用的评论，从中筛选出了与我们的仿冒应用包名相符的应用评论，然后对这些评论进行了一些处理和分析。
 其中，每天评论都会附带一个评价分数，某款App在市场上的平均评价就是所有评论评分的均值。
 
-\section{相关研究}
-近年来，除了对Android App本身的分析研究之外，有不少学者也把研究焦点投放在了应用市场的评论上。
-正如\fullref{chp:background}中\secref{sec:androidMkt}所介绍的一样，应用市场的评论系统营造了一个社区环境，搭建了用户和开发者之间交流的平台，其他用户也能从其他用户的评价决定自己是否也要下载某款应用。
-
-能从其他用户的反馈中获得参考固然是好事情，不少研究也从用户的评论内容中得到了启发。
-Bin Fu等人在2013年发布了WisCom~\cite{fu2013people}——对于某个应用，将其历史评级和评论记录输入WisCom，系统在反馈应用评级变化的同时，也能告诉使用者为什么会受到恶评；
-而Deguang Kong~\cite{kong2015autoreb}等人在2015年发布的AUTOREB则结合了NLP、机器学习技术和声誉系统，先提取用户在某款App的评论中提及到的与安全相关的内容，然后根据每个用户的可信度对该款App是否可能有危险行为进行分数计算，最后用机器学习技术对App进行分类，预测该款App是否会有危险行为。
-
-但不幸的是，移动黑产从业者从评论区中也发掘出了商机。
-从大量的前人工作~\cite{hernandez2019the, xie2014grouptie, zhu2014discovery, hu2019want, chen2017toward, xie2016you, hooi2016fraudar}中，我们可以推断出很多应用市场都饱受虚假评论的困扰。
-一些黑产从业者以应用搜索优化/应用商店优化(App Search Optimization/App Store Optimization，简称ASO)的名义，为一些不良商家提供操纵应用榜单排名的服务（即排名欺诈， Ranking Fraud）。
-他们会为客户的App提供大量虚构的五星好评，而不管该款应用质量如何。这种行为在令一些本身质优的应用被埋没的同时，也让一些广受好评的应用陷入信任危机，破坏了正常的市场秩序。
-Rahman等人在2019年发布了一个关于这类行为的研究~\cite{rahman2019art}，在公开确认了这类行业存在的同时，也对揭露了他们的行为模式、生存情况甚至是收入水平等方面的信息。
-
-\section{收集与分析}
+\section{评论数据收集}
 我们分别从\texttt{360手机助手}中随机选取了少量应用，然后爬取了它们的所有历史评论，再和我们数据集中的样本做比对。
 对于某款仿冒应用，如果其APK包来源包含\texttt{360手机助手}，而且其包名包含在我们在对应市场中爬取评论的应用包名列表中，我们就将这个应用的历史评论提取出来。
 对于每条评论信息，我们能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
 
-\subsection{评论数据概览}
+\subsection{数据概览}
 在我们收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
 要注意的是，由于我们的仿冒应用列表为针对50个热度最高的目标App整理而成，而收集评论的应用是在整个市场范围内随机挑选的，所以这里的仿冒应用占总体应用比例较小。但这不意味着整个市场中就只有这几款应用是仿冒应用。
 另外，由于这856个应用是随机挑选的，我们认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
 我们一共爬取到了267,397名用户的365,461条评论，其中6款仿冒应用的所有历史评论共计3,591条，来自2,946名用户。
 
-\subsection{基础数据分析}
+\subsection{基础分析}
 
 % 画图用的python代码
 % font_size = 20
@@ -130,6 +116,8 @@ Rahman等人在2019年发布了一个关于这类行为的研究~\cite{rahman201
 一款应用的用户越多，真实的评论数目越大，该款应用的评分就会趋向客观，直到收敛到一个可以反映应用质量的真实水平。
 \emph{com.jhwl.fjxa}、\emph{com.arsenal.FunWeather}、\emph{com.sscwap}三款应用的用户量固然不能和\texttt{微信}、\texttt{淘宝}相比，但成百上千的评论数也暗示着一个不小的用户群体。
 在用户群体有一定规模的情况下，还能保持名列前茅的平均评价，究竟是这三款仿冒应用的确受到了用户的热捧，还是另有原因？
+
+\section{排名欺诈分析}
 
 \subsection{排名欺诈检测初探}
 
@@ -239,6 +227,9 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 表中结果显示，无论是用哪种权重对应用可疑度进行排名，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}在总计的848个应用中都排在相当靠前的位置，所以这两个应用都相当可疑，十分可能具有排名欺诈行为。
 另一方面，\emph{com.sscwap}的排名相对靠后，具有排名欺诈行为的可能性较小。
 
+本组实验使用了服务器承担运算任务，实验服务器搭载了两颗Intel的至强E5-2367 V4版8核CPU，内存为252GB。
+在$T_1$分别设置为0.4/0.6/0.8时，三组基于用户可信度实验用的python代码分别需要运行7,086/6,935/6,801分钟才得出结果。
+
 \subsection{基于评论内容相似度的排名欺诈排查}
 与前面的用户可信度计算相比，利用评论内容相似度排查排名欺诈的方法要相对简单一些，计算量也明显较小。
 根据我们的经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
@@ -326,11 +317,14 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 所以说这些看上去稍微类似的评论，并不一定存在关联关系，我们不倾向于认为这款App购买了排名欺诈服务。
 反观\autoref{fig:cmt-sample-1}中的评论，有多条长评论高度相似、甚至一模一样，这在真实案例中是不太可能会存在的情况；而\autoref{fig:cmt-sample-2}中多条近似、相同的评论是在十分接近的时间里被发表的，进一步加深了他们之间存在关联的可能性，所以我们十分有理由相信这两款应用的确存在排名欺诈的行为。
 
+我们还随机抽取了一些发布相同好评的不同用户进行追查，结果发现部分用户在我们收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
+
+\section{本章小结}
+本章从仿冒应用在市场中收到的评论入手，分析了用户对于这类应用的反响。
+然而，出人意料的一致好评让我们感到疑惑，因此我们选取了部分应用的评论数据进行分析，并借鉴了前人研究提出了研究手段对排名诈骗行为进行筛查。
+
 从结果看，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都具有良好的结果。
-但是，我们还随机抽取了一些发布相同好评的不同用户进行追查，结果发现不少用户在我们收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
-如果大部分排名欺诈用户都采用这种只发布少量好评的策略，基于用户可信度权重的排查方法就很可能会因为可参考的数据量太小而失效。
-另外，基于用户可信度权重的排查方法会带来相当大的运算量。
-我们的实验服务器搭载了两颗Intel的至强E5-2367 V4版8核CPU，内存为252GB。
-但在$T_1$分别设置为0.4/0.6/0.8时，三组基于用户可信度实验用的python代码依然分别需要运行7,086/6,935/6,801分钟才得出结果。
-相比之下，基于评论内容相似度的代码只需几分钟就能运算完毕。
+但是，两种方法在性能上依然有较大的区别。
+我们发现部分可疑好评的用户仅仅评论过一到两次，如果大部分排名欺诈用户都采用这种只发布少量好评的策略，基于用户可信度权重的排查方法就很可能会因为可参考的数据量太小而失效；
+另外，基于用户可信度权重的排查方法会带来相当大的运算量，相比之下，基于评论内容相似度的代码只需几分钟就能运算完毕。
 综合上述性能因素，我们认为基于评论内容相似度的排查方法是更为可行的排查方式。
