Revised version 1.01 Update images.

--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -24,4 +24,4 @@
 
 我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
 
-\sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析}
+\sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
