--- a/edwin_2019/chapter-case.tex
+++ b/edwin_2019/chapter-case.tex
@@ -84,7 +84,7 @@
     \subfloat[两种游戏App与其仿冒\label{fig:screenshot_all}]{\includegraphics[width=0.3\textwidth]{./Figures/edwin-screenshot1.jpg}}\hfill
     \subfloat[正版\textit{\small 开心消消乐}\label{fig:screenshot_official}]{\includegraphics[width=0.3\textwidth]{./Figures/edwin-screenshot2.jpg}}\hfill
     \subfloat[仿冒版\textit{\small 开心消消乐}\label{fig:screenshot_fake}]{\includegraphics[width=0.3\textwidth]{./Figures/edwin-screenshot3.jpg}}\hfill
-    \label{游戏类App及其仿冒样本}
+    \caption{游戏类App及其仿冒样本}
 \end{figure}
 
 % We even ran these apps on our device.
