--- a/edwin_2019/chapter-discoveries.tex
+++ b/edwin_2019/chapter-discoveries.tex
@@ -186,6 +186,7 @@
 
 % (2) malicious apps, for malicious apps are usually in small sizes.
 2）是恶意应用，因为恶意应用除了恶意代码之外，通常没有太多其他内容。
+\vspace{1mm}
 
 % In short, Fig.~\autoref{fig:Statistic_fake_and_official} tells that fake apps
 简而言之，\autoref{fig:Statistic_fake_and_official}说明了仿冒应用：
@@ -195,18 +196,7 @@
 
 % (2) are usually of a small size.
 2）通常大小更小。
-
-\begin{figure*}[htbp]
-	\centering
-    \subfloat[360应用市场\label{fig:360_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-360.png}}\hfill
-    \subfloat[应用宝\label{fig:yyb_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-yyb.png}}\hfill
-
-	\subfloat[百度手机助手\label{fig:baidu_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-baidu.png}}\hfill
-    \subfloat[小米应用市场（部分信息被折叠）\label{fig:xiaomi_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-xiaomi.png}}\hfill
-	\caption{各大应用市场应用详情页（从桌面端浏览）}
-	\label{fig:app_detail_page}
-	\vspace{-5mm}
-\end{figure*}
+\vspace{1mm}
 
 % To a large extent, we owe the first point to the incompleteness of the information the app store displays on apps.
 在很大程度上，我们认为产生第一点结论的原因是应用市场上提供的App信息的缺失和用户对Android App了解的缺乏。
@@ -218,7 +208,18 @@
 个别应用市场（如\autoref{fig:xiaomi_detail}所示的小米应用市场）上，应用的某些信息甚至被折叠了起来，用户要点开折叠页才能发现一个App会有多大。
 因此，不会被普通用户关注的包名自然可能会出现各种五花八门的情况，而一定会显示的应用名则是越接近正版App越容易诱导用户下载。
 
-\vspace{5mm}
+\begin{figure*}[t]
+	\centering
+    \subfloat[360应用市场\label{fig:360_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-360.png}}\hfill
+    \subfloat[应用宝\label{fig:yyb_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-yyb.png}}\hfill
+
+	\subfloat[百度手机助手\label{fig:baidu_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-baidu.png}}\hfill
+    \subfloat[小米应用市场（部分信息被折叠）\label{fig:xiaomi_detail}]{\includegraphics[width=0.49\textwidth]{./Figures/edwin-app-detail-xiaomi.png}}\hfill
+	\caption{各大应用市场应用详情页（从桌面端浏览）}
+	\label{fig:app_detail_page}
+	\vspace{-5mm}
+\end{figure*}
+% \vspace{5mm}
 \noindent\fbox{
 	\parbox{0.95\linewidth}{
 		% \textbf{Remark 1}: Most certificates link with only a number of fake apps, which is highly possible to be a fake developers' evasive strategy.
