--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -162,7 +162,7 @@ Rahman等人在2019年发布了一个关于这类行为的研究~\cite{rahman201
 
 	\item {\bf 对仿冒应用评论的挖掘与分析}
 	本文进一步从应用评论出发，试图从市场反应了解用户对仿冒应用的态度。
-	之后，作者使用了两种不同方法探究了仿冒应用与近期研究热点——排名欺诈行为——之间的关联。
+	之后，作者使用了两种不同方法探究了仿冒应用与近期研究热点——排名欺诈行为——之间的关联，以深化读者对仿冒应用生态的了解。
 
 
 
